# tracker-assistant

./: .ai-factory.json  .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.override.yml  compose.production.yml  compose.yml  pyproject.toml  skills-lock.json  telegram_projects.json.example
.ai-factory/: ARCHITECTURE.md  DESCRIPTION.md  PLAN.md  ROADMAP.md  config.yaml
.ai-factory/evolution/claude-p-enrich/: artifact.md  history.jsonl  run.json
.ai-factory/patches/: 2026-05-20-11.42.md  2026-05-25-14.00.md  2026-05-25-18.45.md  2026-05-25-19.05.md  2026-05-28-16.23.md
.ai-factory/plans/: fix-tag-assignment.md  telegram-bot-interface.md  telegram-task-review.md
.ai-factory/rules/: base.md
.claude/skills/timetta-api/: SKILL.md
docs/: SCOPE_GUARD_TEMPLATE.md  api-reference.md  getting-started.md  submit-pipeline.md  telegram-bot.md  timetta-api.md  timetta-openapi.yaml  timetta-quirks.md
scripts/: enrich_task.py  submit_task.py  task_cli.py
src/tracker_assistant/: __init__.py  io_utils.py  models.py  pipeline.py
src/tracker_assistant/adapters/: __init__.py  timetta_adapter.py  timetta_auth.py  yandex_tracker_adapter.py
src/tracker_assistant/enrich/: __init__.py  cli.py  service.py
templates/: task-default.json
tests/: test_adapter.py  test_cache.py  test_fixes.py  test_logging.py  test_pipeline.py  test_submit_task.py  test_telegram_config.py  test_telegram_handlers.py  test_telegram_pagination.py  test_telegram_projects.py  test_telegram_vps_sync.py  test_timetta_auth.py
(+21 files in other folders)
