[project]
name = "tracker-assistant"
version = "0.1.0"
description = "Minimalist Python client for Yandex Tracker"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot[job-queue]>=20.0",
]

[project.scripts]
task-cli      = "tracker_assistant.timetta.cli:main"
task-submit   = "tracker_assistant.submit.cli:main"
task-enrich   = "tracker_assistant.enrich.cli:main"
task-telegram = "tracker_assistant.telegram.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracker_assistant"]
